// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute with address.chainId should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
        "balance": "842796652117371",
      },
      {
        "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
        "balance": "1604497408893139674",
      },
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": [
    {
      "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
      "balance": "842796652117371",
    },
    {
      "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
      "balance": "1604497408893139674",
    },
  ],
  "statusCode": 200,
}
`;

exports[`execute with explicit minConfirmations should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
        "balance": "15671674977708000",
      },
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": [
    {
      "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
      "balance": "15671674977708000",
    },
  ],
  "statusCode": 200,
}
`;

exports[`execute with multiple addresses should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
        "balance": "842796652117371",
      },
      {
        "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
        "balance": "1604497408893139674",
      },
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": [
    {
      "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
      "balance": "842796652117371",
    },
    {
      "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
      "balance": "1604497408893139674",
    },
  ],
  "statusCode": 200,
}
`;

exports[`execute with single address should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
        "balance": "842796652117371",
      },
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": [
    {
      "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
      "balance": "842796652117371",
    },
  ],
  "statusCode": 200,
}
`;
